--- a/Capstone Project 1/index.html
+++ b/Capstone Project 1/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+    <meta charset="UTF-8">
     <head>
-        My Resume
+        <img src="./assets/images/profilepic.png">
+        <title>My Resume</title>
     </head>
     <hr>
     <body>
@@ -22,5 +24,10 @@
         <h1>
             Certificates
         </h1>
+        <hr>
+        <a href="https://www.buccaneers.com/">Hobbies</a>
     </body>
+    <footer>
+        <h2>Christopher Sult</h2>
+    </footer>
 </html>
